# pureswarm

./: %TEMP%pg_readme.json  .gitignore  CLAUDE.md  CLOUD_MIGRATION_GUIDE.md  CLOUD_SHELL_UPLOAD.md  DISTRIBUTED_ARCHITECTURE.md  LICENSE  MANUAL_MIGRATION.md  PORTFOLIO_SHOWCASE.md  PURESWARM_OPERATIONS_GUIDE.md  README.md  REVIEW_CHECKLIST_02-11.md  SESSION_HANDOFF.md  SESSION_HANDOFF_02-11_FINAL.md  SESSION_HANDOFF_02-12_BRIDGE.md  SESSION_HANDOFF_02-12_FITNESS_FIX.md  VOTING_FIX.md  calc_sig.py  competition_structure.py  config.toml  emergency.py  issue_prophecy.py  issue_prophecy_captcha.py  issue_prophecy_chronicle.py  migrate_to_cloud.ps1  monitor.py  pureswarm_whitepaper.md  pyproject.toml  ralph_wiggums.py  requirements.txt  review_simulation.py  run_bridge.py  run_query_listener.py  run_simulation.py  sms_receiver.py  test_venice.py
cloud_reports/: simulation_report.json
data/: .prophecy  prophecies.json
directives/: dopamine_flush.md
docs/: WHITEPAPER.md
pureswarm/: __init__.py  agent.py  bridge.py  bridge_http.py  chronicle.py  consensus.py  dashboard.py  dashboard_mockup.py  deliberation.py  evolution.py  execution.py  memory.py  message_bus.py  models.py  prompt_economy.py  prompt_wallet.py  prophecy.py  query_listener.py  security.py  simulation.py  squad_competition.py  tenet_clusterer.py  workshop.py
scripts/: auto_handoff.py  check_all_metrics.py  seed_consolidation_wallets.py  sync_metrics.py  verify_cog_persistence.py
test-cluster/: README.md  RUNBOOK.md  docker-compose.yml  openclaw-config.json5  setup.ps1  start-cluster.ps1  wait-docker.ps1  (+1 more)
(+30 files in other folders)
