[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pureswarm"
version = "0.1.0"
description = "Autonomous agent swarm prototype with emergent collective behavior"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["agents", "swarm", "consensus", "emergence", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
pureswarm = "run_simulation:cli"

[tool.setuptools.packages.find]
include = ["pureswarm*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
